# learnscripture.net

./: .editorconfig  .gitignore  .gitmodules  .hgignore  .hgtags  .pre-commit-config.yaml  Dockerfile  LICENSE.txt  README.rst  conftest.py  devbox.json  docker-compose.yml  fabfile.py  fabutils  l10n.toml  manage.py  notify_all_accounts.py  package-lock.json  package.json  pyproject.toml  pytest.ini  ravenclient.py  requirements-dev.in  requirements-dev.txt  requirements-node.txt  requirements.in  requirements.txt  runtests.py  setup.cfg  tsconfig.json  webpack.config.base.js  webpack.config.deploy.js  webpack.config.dev-hotload.js  webpack.config.dev.js  webpack.config.js  webpack.config.tests.js
.devcontainer/: devcontainer.json
accounts/: admin.py  apps.py  email_reminders.py  forms.py  hooks.py  lookups.py  memorymodel.py  models.py  signals.py  tasks.py  tokens.py
awards/: __init__.py  admin.py  apps.py  hooks.py  models.py  signals.py  tasks.py  utils.py
bibleverses/: __init__.py  admin.py  apps.py  books.py  constants.py  fields.py  forms.py  hooks.py  importutils.py  languages.py  models.py  parsing.py  services.py  signals.py  suggestions.py  tasks.py  textutils.py
cms/: __init__.py  admin.py  admin_forms.py  admin_urls.py  admin_views.py  apps.py  managers.py  models.py  views.py
comments/: __init__.py  admin.py  apps.py  hooks.py  models.py  signals.py
config/: README.rst  crontab  crontab.template  erl_inetrc  hgweb.config  hgweb.wsgi  hosts  nginx.conf.template  pgbouncer.ini  pgbouncer_users.txt  start_supervisor.sh  supervisor.conf.template  supervisord.conf
docs/: DNS_setup.rst  README.rst  android_app.rst  architecture.rst  code_notes.rst  coding_standards.rst  deployment.rst  development_environment.rst  development_principles.rst  development_setup.rst  ftl_primer.rst  helpers_wanted.rst  languages.rst  organisation_structure.rst  profiling.rst  project_structure.rst  server_setup.rst  texts.rst  todo.rst
events/: admin.py  apps.py  hooks.py  models.py  tasks.py
groups/: __init__.py  admin.py  apps.py  forms.py  hooks.py  models.py  signals.py  utils.py
learnscripture/: __init__.py  admin.py  apps.py  auth.py  celery.py  checks_monkeypatch.py  context_processors.py  datastructures.py  db_debug.py  decorators.py  forms.py  ftl_bundles.py  hooks.py  metrics.py  middleware.py  models.py  router.py  (+7 more)
(+900 files in other folders)
