[project]
name = "learnscripture"
version = "1.0"
readme = "README.rst"
requires-python = "==3.10.*"
dependencies = [
    "aldjemy==2.6",
    "attrs==21.2.0",
    "certifi==2021.10.8",
    "concurrent-log-handler==0.9.19",
    "django==4.1.7",
    "django-anymail==8.4",
    "django-autocomplete-light==3.9.4",
    "django-autoslug==1.9.8",
    "django-capture-tag==1.0",
    "django-compressor==4.3.1",
    "django-ftl==0.13",
    "django-markup==1.5",
    "django-mptt==0.13.4",
    "django-paypal==2.0",
    "django-q==1.3.9",
    "django-render-block==0.9.1",
    "django-spurl==0.6.8",
    "django-sql-utils==0.6.1",
    "django-webpack-loader==1.8.1",
    "djangorestframework==3.12.4",
    "docutils==0.18.1",
    "easy-thumbnails==2.8.5",
    "furl==2.1.3",
    "lxml==4.6.4",
    "numpy==1.21.4",
    "parsy==1.4.0",
    "psycopg2-binary==2.9.2",
    "pykov",
    "pymemcache==4.0.0",
    "pyquery==1.4.3",
    "pytz==2021.3",
    "pyuca==1.2",
    "requests==2.26.0",
    "sentry-sdk==1.5.0",
    "sqlalchemy==1.4.27",
    "uwsgi==2.0.20",
]


[tool.ruff]
line-length = 120
target-version = 'py310'

[tool.ruff.lint]
extend-select = [
  "UP",  # enable pyupgrade
  "I",  # enable isort
  "FLY", # enable flynt
]
ignore = ["E501","E731"]

[tool.uv.sources]
pykov = { url = "https://github.com/riccardoscalco/Pykov/archive/16cda2f2c0ed8143ddcfa25dac34d3dadc982380.tar.gz" }
fabutils = { git = "https://github.com/learnscripture/fabutils.git", rev = "67e9a529f90616312e6374de25bcf394e24d135f" }
django-urlconfchecks = { git = "https://github.com/spookylukey/django-urlconfchecks", rev = "c10984a1d0b3bcc7367a1b8ee147e55a7d201f58" }

[dependency-groups]
dev = [
    "compare-locales==8.2.0",
    "coverage==6.1.2",
    "django-debug-toolbar==4.2.0",
    "django-extensions==3.2.3",
    "django-functest==1.5.3",
    "django-urlconfchecks",
    "elm-fluent==0.6.0",
    "fabric==3.0.0",
    "fabutils",
    "filelock==3.4.0",
    "ipython==8.11",
    "mock==4.0.3",
    "pip-tools==6.12.2",
    "pre-commit==2.15.0",
    "pyinotify==0.9.6",
    "pytest==6.2.5",
    "pytest-django==4.5.2",
    "pytest-xdist[psutil]==2.4.0",
    "pyvirtualdisplay==2.2",
    "selenium==4.1.3",
    "texttable==1.6.7",
    "time-machine==2.9.0",
    "werkzeug==2.0.2",
]
